--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ color:var(--color-navy-blue);
 .nav-item {
 }
 .nav-link {
-	color: var(--color-navy-blue);
+	color: var(--color-ocean);
 	display: block;	
 	padding: 24px 0;
 	transition-property: color;
@@ -644,9 +644,11 @@ border-radius: 4px;
 }
 .main-btn{
 	cursor: pointer;
-	transition-property: color, background, border, box-shadow;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+	 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+	 border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+	 box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .main-btn:hover,
 .main-btn:focus {
@@ -678,29 +680,27 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .img-port {
 	
 }
-.overlay {
-	position: absolute;
-	transform: translateY(100%);
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: var(--color-iris);
-	padding: 40px 32px;
-	transition-property: transform;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.list-img-item:hover .overlay{
+
+.link-portfolio:hover .overlay-text,
+.link-portfolio:focus .overlay-text{
 	transform: translateY(0);
 }
 .overlay-text {
+	position: absolute;
+	top: 0;
 	color: var(--color-cloud);
+	background-color: var(--color-iris);
 	font-family: var(--primary-font);
+	width: 100%;
+	height: 100%;
+	transform: translateY(100%);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+	padding: 40px 32px;
+
 }
 
 .img-subtitle {
@@ -727,7 +727,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 	visibility: visible;
 	pointer-events: initial;
   
-	transition: opacity , visibility var(--anim-fast);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .backdrop.is-hidden {
 	opacity: 0;
@@ -737,19 +737,19 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   }
   .modal {
 	position: absolute;
-	top: calc(50%);
-	left: calc(50%);
-	transform: translateX(-50%) translateY(-50%);
+	top: 50%;
+	left: 50%;
+	transform: transform: translate(-50%, -50%) scale(1);
   
 	width: 408px;
-	height: 584px;
+	min-height: 584px;
   
 	background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   
-	transition: opacity 250ms ease-in, transform 250ms ease-in;
-	transition-delay: 400ms;
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
   }
   
   .backdrop.is-hidden .modal {
@@ -761,21 +761,32 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 	position: absolute;
 	top: 24px;
 	right: 24px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 	display: flex;
 	align-items: center;
 	justify-content: center;
   
-	width: 36px;
-	height: 36px;
+	width: 24px;
+	height: 24px;
 	padding: 0;
   
 	border-radius: 50%;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	background-color: var(--color-cornflower);
   }
+  .modal-close-btn:hover,
+  .modal-close-btn:focus{
+	background-color: var(--color-ocean); 
+	border: none; 
+  }
   .modal-close-icon {
 	fill: var(--color-navy-blue);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+  .modal-close-icon:hover,
+  .modal-close-icon:focus{
+	fill: var(--color-white);
   }
 
 
