--- a/css/style.css
+++ b/css/style.css
@@ -739,7 +739,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: transform: translate(-50%, -50%) scale(1);
+	transform: translate(-50%, -50%) scale(1);
   
 	width: 408px;
 	min-height: 584px;
