--- a/css/style.css
+++ b/css/style.css
@@ -507,9 +507,7 @@ align-items: center;
 border: 1px solid #8E8F99;
 border-radius: 4px;
 color: var(--color-light-slate);
-transition-property: background-color, border;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 	
@@ -716,18 +714,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 	position: fixed;
 	top: 0;
 	left: 0;
-  
-	width: 100%;
+    width: 100%;
 	height: 100%;
-  
-	background: rgba(46, 47, 66, 0.4);
-	
-  
-	opacity: 1;
-	visibility: visible;
+    background: rgba(46, 47, 66, 0.4);
 	pointer-events: initial;
-  
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .backdrop.is-hidden {
 	opacity: 0;
@@ -740,9 +731,8 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) scale(1);
-  
-	width: 408px;
-	min-height: 584px;
+    width: 408px;
+	min-height: 576px;
   
 	background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -778,15 +768,16 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   .modal-close-btn:hover,
   .modal-close-btn:focus{
 	background-color: var(--color-ocean); 
-	border: none; 
+	border: none;
+	
   }
   .modal-close-icon {
 	fill: var(--color-navy-blue);
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
-  .modal-close-icon:hover,
-  .modal-close-icon:focus{
-	fill: var(--color-white);
+  .modal-close-btn:hover .modal-close-icon,
+  .modal-close-btn:focus .modal-close-icon{
+	fill: var(--color-white); 
   }
 
 
