--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ color:var(--color-navy-blue);
 .nav-item {
 }
 .nav-link {
-	color: var(--color-ocean);
+	color: var(--color-navy-blue);
 	display: block;	
 	padding: 24px 0;
 	transition-property: color;
@@ -230,7 +230,7 @@ color:var(--color-navy-blue);
 .nav-link:focus {
   color: var(--color-ocean);
   }
-  .nav-link::after {
+  .active::after {
 	content: '';
   
 	position: absolute;
@@ -240,11 +240,9 @@ color:var(--color-navy-blue);
 	width: 100%;
 	height: 4px;
     border-radius: 2px;
-	
-  }
-  .nav-link.active::after {
 	background: var(--color-ocean);
   }
+  
   
   
 .address {
